# gatewarden

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LOCAL_TESTING.md  PRODUCTION_READINESS_AUDIT.md  README.md  SECURITY.md  SPONSORS.md
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
archive/: v1_plan.md  v2_plan.md
examples/: basic_validation.rs
src/: clock.rs  config.rs  errors.rs  lib.rs  manager.rs
src/cache/: file.rs  format.rs  mod.rs
src/client/: http.rs  mod.rs
src/crypto/: digest.rs  freshness.rs  mod.rs  pipeline.rs  signing.rs  verify.rs
src/integrations/: mod.rs
src/meter/: mod.rs  usage.rs
src/policy/: access.rs  mod.rs
src/protocol/: mod.rs  models.rs
tests/: smoke.rs
tests/fixtures/: README.md
