[package]
name = "gatewarden"
version = "0.1.0"
edition = "2021"
description = "Hardened Keygen.sh license validation infrastructure"
license = "Proprietary"
publish = false

[dependencies]
# Crypto
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Async
tokio = { version = "1", features = ["sync", "fs"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Platform
dirs = "5"
once_cell = "1"

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
test-seams = []  # Expose clock injection for integration tests
