[package]
name = "gatewarden"
version = "0.1.2"
edition = "2021"
authors = ["Michael A. Kuykendall <michaelallenkuykendall@gmail.com>"]
description = "Hardened Keygen.sh license validation infrastructure"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Michael-A-Kuykendall/gatewarden"
homepage = "https://github.com/Michael-A-Kuykendall/gatewarden"
documentation = "https://docs.rs/gatewarden"
keywords = ["license", "keygen", "security", "ed25519", "offline"]
categories = ["authentication", "cryptography", "web-programming"]
rust-version = "1.70"
exclude = [".github/copilot-instructions.md"]

[dependencies]
# Crypto
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Async
tokio = { version = "1", features = ["sync", "fs"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Platform
dirs = "5"
once_cell = "1"

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
test-seams = []  # Expose clock injection for integration tests
